--- a/src/layouts/AppLayout/AppLayout.css
+++ b/src/layouts/AppLayout/AppLayout.css
@@ -1,5 +1,6 @@
 .layout {
   width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
+  display: grid;
+  min-height: 100vh;
+  grid-template-rows: min-content 1fr min-content;
 }
