feat: create /movies and /saved movies pages, add links to header

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@
   --primary-element-color: #3ddc84;
   --seconday-element-color: #303030;
   --tertiary-element-color: #424242;
+  --another-color: #4285f4;
+  --secondary-text-color: #8b8b8b;
   scroll-behavior: smooth;
 }
 
