--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,16 +7,51 @@
   padding-inline: 7rem;
 }
 
+.header__logo {
+  transition: all 0.3s linear;
+}
+
+.header__logo:hover {
+  opacity: 0.7;
+}
+
+.header__nav,
+.header__nav-list,
+.header__account,
+.header__account-icon {
+  display: flex;
+}
+
+.header__account {
+  gap: 1.3rem;
+}
+
+.header__account-icon {
+  width: 3rem;
+  height: 3rem;
+  background: #313131;
+  border-radius: 0.6rem;
+}
+
+.header__nav {
+  gap: 4rem;
+}
+
+.header__account,
+.header__nav-list,
+.header__account-icon {
+  align-items: center;
+  justify-content: center;
+}
+
 .header__nav-list {
   list-style: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 3rem;
 }
 
-.header__signup,
-.header__signin {
+.header__link,
+.header__signin,
+.header__account {
   text-decoration: none;
   font-size: 1.2rem;
   font-weight: 500;
@@ -24,13 +59,18 @@
   transition: all 0.2s linear;
 }
 
-.header__signup {
+.header__link,
+.header__account {
   color: #fff;
 }
 
-.header__signup:hover,
-.header__signin:hover {
+.header__link:hover,
+.header__account:hover {
   opacity: 0.7;
+}
+
+.header__signin:hover {
+  opacity: 0.8;
 }
 
 .header__signin {
