--- a/src/pages/NotFoundPage/NotFoundPage.css
+++ b/src/pages/NotFoundPage/NotFoundPage.css
@@ -1,17 +1,12 @@
 .not-found {
   width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
   flex-direction: column;
   text-align: center;
-  gap: 0.5rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  flex-direction: column;
 }
 
 .not-found__error,
@@ -27,6 +22,7 @@
 
 .not-found__message {
   font-size: 1.6rem;
+  margin-block-start: 0.5rem;
 }
 
 .not-found__link {
@@ -35,9 +31,7 @@
   text-decoration: none;
   transition: all 0.2s linear;
   position: absolute;
-  bottom: 60px;
-  left: 50%;
-  transform: translate(-50%);
+  bottom: 6rem;
 }
 
 .not-found__link:hover {
