--- a/src/components/Student/Student.css
+++ b/src/components/Student/Student.css
@@ -94,3 +94,10 @@
   font-weight: 400;
   line-height: 2rem;
 }
+
+.student__portfolio-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
