--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -1,14 +1,9 @@
 .profile,
-.profile__data,
-.profile__form,
-.profile__info,
-.profile__divider,
-.profile__buttons {
+.profile__data {
   width: 100%;
 }
 
-.profile,
-.profile__buttons {
+.profile {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,8 +18,7 @@
   height: 100%;
 }
 
-.profile__greeting,
-.profile__buttons {
+.profile__greeting {
   text-align: center;
 }
 
@@ -36,66 +30,4 @@
 
 .profile__data {
   max-width: 41rem;
-}
-
-.profile__form {
-  margin-top: 12.3rem;
-}
-
-.profile__info {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border: none;
-}
-
-.profile__label {
-  font-size: 1.1rem;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.profile__input {
-  border: none;
-  background: none;
-  color: #fff;
-  text-align: right;
-  width: 90%;
-}
-
-.profile__divider {
-  margin-block: 1.6rem;
-  height: 0.1rem;
-  border: none;
-  background: var(--tertiary-element-color, #424242);
-}
-
-.profile__buttons {
-  gap: 1.6rem;
-  margin-top: 22rem;
-}
-
-.profile__edit,
-.profile__signout {
-  font-size: 1.3rem;
-  line-height: normal;
-  border: none;
-  background: none;
-  transition: all 0.2s linear;
-}
-
-.profile__edit {
-  font-weight: 400;
-  color: #fff;
-}
-
-.profile__signout {
-  color: #ee3465;
-  font-weight: 500;
-}
-
-.profile__edit:hover,
-.profile__signout:hover {
-  opacity: 0.7;
-  cursor: pointer;
 }
