--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -60,3 +60,9 @@
 .footer__link:hover {
   opacity: 0.7;
 }
+
+@media screen and (max-width: 1024px) {
+  .footer {
+    padding-inline: 3rem;
+  }
+}
