--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -82,3 +82,22 @@
   display: block;
   text-align: center;
 }
+
+.header__burger {
+  width: 4.4rem;
+  height: 4.4rem;
+  background: url(../../images/burger.svg) center;
+  border: none;
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    padding-inline: 3rem;
+  }
+
+  .header__account,
+  .header__movies,
+  .header__saved {
+    display: none;
+  }
+}
