--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -55,3 +55,38 @@
 .hero__link:hover {
   opacity: 1;
 }
+
+@media screen and (max-width: 1024px) {
+  .hero {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-top: 14rem;
+    gap: 4.8rem;
+    padding-inline: 4.4rem;
+    padding-bottom: 7.6rem;
+  }
+
+  .hero__info {
+    order: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hero__title {
+    font-size: 4rem;
+    line-height: 5rem;
+    max-width: 68rem;
+  }
+
+  .hero__subtitle {
+    font-size: 1.3rem;
+    max-width: 26rem;
+    margin-top: 2.2rem;
+  }
+
+  .hero__link {
+    margin-top: 9.2rem;
+  }
+}
