--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -27,3 +27,9 @@
 .project:hover {
   background: var(--tertiary-element-color, #424242);
 }
+
+@media screen and (max-width: 1024px) {
+  .project__title {
+    font-size: 2.8rem;
+  }
+}
