--- a/src/components/Student/Student.css
+++ b/src/components/Student/Student.css
@@ -64,6 +64,7 @@
   font-weight: 400;
   line-height: 2.2rem;
   margin-top: 2.6rem;
+  max-width: 60rem;
 }
 
 .student__github {
@@ -100,4 +101,30 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .student {
+    padding-block: 9rem;
+  }
+
+  .student__info {
+    column-gap: 5rem;
+    padding-bottom: 9.1rem;
+  }
+
+  .student__title {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+
+  .student__general,
+  .student__bio {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+  }
+
+  .student__portfolio {
+    gap: 5rem;
+  }
 }
