--- a/src/components/TechItem/TechItem.css
+++ b/src/components/TechItem/TechItem.css
@@ -1,6 +1,4 @@
 .tech {
-  padding-inline: 2.6rem;
-  padding-block: 2.2rem;
   text-align: center;
   font-size: 1.4rem;
   font-weight: 400;
@@ -8,4 +6,15 @@
   letter-spacing: -0.56px;
   background: var(--secondary-element-color, #303030);
   border-radius: 1rem;
+  min-width: 8.4rem;
+  min-height: 5.7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .tech {
+    font-size: 1.2rem;
+  }
 }
