--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -69,7 +69,9 @@
   opacity: 0.7;
 }
 
-.header__signin:hover {
+.header__signin:hover,
+.header__burger:hover {
+  cursor: pointer;
   opacity: 0.8;
 }
 
@@ -88,11 +90,17 @@
   height: 4.4rem;
   background: url(../../images/burger.svg) center;
   border: none;
+  display: none;
+  transition: all 0.2s linear;
 }
 
 @media screen and (max-width: 1024px) {
   .header {
     padding-inline: 3rem;
+  }
+
+  .header__burger {
+    display: block;
   }
 
   .header__account,
