--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -60,11 +60,11 @@
   .hero {
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     text-align: center;
-    padding-top: 14rem;
     gap: 4.8rem;
     padding-inline: 4.4rem;
-    padding-bottom: 7.6rem;
+    min-height: calc(100vh - 8rem);
   }
 
   .hero__info {
