--- a/src/pages/SavedMoviesPage/SavedMovies.css
+++ b/src/pages/SavedMoviesPage/SavedMovies.css
@@ -2,3 +2,9 @@
   width: 100%;
   padding-inline: 7rem;
 }
+
+@media screen and (max-width: 1024px) {
+  .saved-movies {
+    padding-inline: 3rem;
+  }
+}
