--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -33,3 +33,10 @@
     font-size: 2.8rem;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .project__title {
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+  }
+}
