--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -20,3 +20,20 @@
   font-weight: 500;
   line-height: normal;
 }
+
+@media screen and (max-width: 600px) {
+  .auth {
+    gap: 0;
+    max-width: unset;
+  }
+
+  .auth__icon,
+  .auth__message {
+    align-self: center;
+  }
+
+  .auth__message {
+    margin-top: 5rem;
+    margin-bottom: 8rem;
+  }
+}
