--- a/src/components/Movie/Movie.css
+++ b/src/components/Movie/Movie.css
@@ -60,3 +60,20 @@
   cursor: pointer;
   opacity: 0.8;
 }
+
+@media screen and (max-width: 600px) {
+  .movie {
+    gap: 1.4rem;
+    padding-block: 1.4rem;
+  }
+
+  .movie__title {
+    font-size: 1.2rem;
+    line-height: 1.8rem;
+  }
+
+  .movie__duration {
+    font-size: 1rem;
+    line-height: 1.8rem;
+  }
+}
