--- a/src/components/ProfileForm/ProfileForm.css
+++ b/src/components/ProfileForm/ProfileForm.css
@@ -1,7 +1,3 @@
-.profile-form {
-  margin-top: 12.3rem;
-}
-
 .profile-form,
 .profile-form__info,
 .profile-form__divider,
@@ -27,7 +23,8 @@
   background: none;
   color: #fff;
   text-align: right;
-  width: 90%;
+  width: 80%;
+  text-overflow: ellipsis;
 }
 
 .profile-form__divider {
@@ -35,39 +32,4 @@
   height: 0.1rem;
   border: none;
   background: var(--tertiary-element-color, #424242);
-}
-
-.profile-form__buttons {
-  gap: 1.6rem;
-  margin-top: 22rem;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.profile-form__edit,
-.profile-form__signout {
-  font-size: 1.3rem;
-  line-height: normal;
-  border: none;
-  background: none;
-  transition: all 0.2s linear;
-}
-
-.profile-form__edit {
-  font-weight: 400;
-  color: #fff;
-}
-
-.profile-form__signout {
-  color: #ee3465;
-  font-weight: 500;
-}
-
-.profile-form__edit:hover,
-.profile-form__signout:hover {
-  opacity: 0.7;
-  cursor: pointer;
 }
