--- a/src/components/Progress/Progress.css
+++ b/src/components/Progress/Progress.css
@@ -4,7 +4,10 @@
   display: flex;
   flex-direction: column;
   gap: 1.4rem;
-  min-width: 14rem;
+}
+
+.progress_type_green {
+  max-width: 22.8rem;
 }
 
 .progress_percentage {
@@ -25,6 +28,18 @@
 
 @media screen and (max-width: 768px) {
   .progress_type_green {
-    max-width: 14rem !important;
+    max-width: 14rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .progress_percentage,
+  .progress__title {
+    font-size: 1.1rem;
+    line-height: normal;
+  }
+
+  .progress_type_green {
+    max-width: 10rem;
   }
 }
