--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -17,3 +17,13 @@
   background: #dadada;
   margin-top: 2.3rem;
 }
+
+@media screen and (max-width: 768px) {
+  .title-container__title {
+    font-size: 1.8rem;
+  }
+
+  .title-container__divider {
+    margin-top: 2.8rem;
+  }
+}
