--- a/src/components/Student/Student.css
+++ b/src/components/Student/Student.css
@@ -101,6 +101,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  list-style: none;
 }
 
 @media screen and (max-width: 1024px) {
@@ -124,6 +125,11 @@
     line-height: 1.8rem;
   }
 
+  .student__bio,
+  .student__general {
+    margin: unset;
+  }
+
   .student__image {
     width: 25.5rem;
     height: 30.7rem;
@@ -131,5 +137,65 @@
 
   .student__portfolio {
     gap: 5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .student__info {
+    padding-top: 6rem;
+    padding-bottom: 7rem;
+    grid-template-areas: 'image' 'text' 'github';
+    grid-template-columns: 1fr;
+  }
+
+  .student__texts {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .student__title {
+    font-size: 3rem;
+    line-height: normal;
+  }
+
+  .student__general,
+  .student__bio {
+    font-size: 1.1rem;
+    line-height: 1.6rem;
+  }
+
+  .student__bio {
+    margin-top: unset;
+  }
+
+  .student__image {
+    width: 100%;
+    max-width: unset;
+    height: 35.2rem;
+  }
+
+  .student__portfolio {
+    gap: 4rem;
+  }
+
+  .student__portfolio-title {
+    font-size: 1.4rem;
+    line-height: 2rem;
+  }
+
+  .student__portfolio-list {
+    gap: 2rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .student {
+    padding-block: 7rem;
+    padding-inline: 1.8rem;
+  }
+
+  .student__info {
+    column-gap: 4rem;
   }
 }
