--- a/src/layouts/SimpleLayout/SimpleLayout.css
+++ b/src/layouts/SimpleLayout/SimpleLayout.css
@@ -7,3 +7,11 @@
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (max-width: 600px) {
+  .simple-layout {
+    padding-top: 5.6rem;
+    padding-bottom: 3rem;
+    padding-inline: 3rem;
+  }
+}
