--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -91,11 +91,18 @@
   background: url(../../images/burger.svg) center;
   border: none;
   transition: all 0.2s linear;
+  display: none;
 }
 
 @media screen and (max-width: 1024px) {
   .header {
     padding-inline: 3rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header__burger {
+    display: block;
   }
 
   .header__account,
