--- a/src/components/Auth/Auth.css
+++ b/src/components/Auth/Auth.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  height: 100%;
   gap: 4rem;
   text-align: start;
 }
