--- a/src/components/AuthBottomControls/AuthBottomControls.css
+++ b/src/components/AuthBottomControls/AuthBottomControls.css
@@ -1,11 +1,11 @@
 .controls {
   width: 100%;
-  margin-top: 11rem;
   display: flex;
   flex-direction: column;
   gap: 1.6rem;
   align-items: center;
   justify-content: center;
+  align-self: flex-end;
 }
 
 .controls__question {
@@ -19,6 +19,11 @@
 .controls__link {
   text-decoration: none;
   color: var(--another-color, #4285f4);
+  transition: all 0.2s linear;
+}
+
+.controls__link:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 600px) {
