--- a/src/components/ProfileData/ProfileData.css
+++ b/src/components/ProfileData/ProfileData.css
@@ -3,8 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  min-height: calc(100vh - 7.6rem);
+  justify-content: center;
   padding-block: 7rem;
 }
 
@@ -15,6 +14,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin-top: 22rem;
 }
 
 .profile-form__edit,
@@ -42,10 +42,17 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 768px) {
+  .profile-form__buttons {
+    margin-top: 21rem;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .profile__data {
-    min-height: calc(100vh - 8rem);
     padding-top: 7rem;
     padding-bottom: 4rem;
+    min-height: calc(100vh - 8rem);
+    justify-content: space-between;
   }
 }
