--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,11 +1,8 @@
 .project {
   width: 100%;
   padding-block: 2rem;
-  border-bottom: 1px solid var(--tertiary-element-color, #424242);
   text-decoration: none;
   display: block;
-  transition: all 0.3s linear;
-  border-radius: 1rem;
 }
 
 .project__content {
@@ -13,7 +10,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-inline: 1rem;
 }
 
 .project__title {
@@ -24,8 +20,13 @@
   letter-spacing: -1.2px;
 }
 
+.project__arrow {
+  font-size: 2.8rem;
+  color: #fff;
+}
+
 .project:hover {
-  background: var(--tertiary-element-color, #424242);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1024px) {
@@ -34,9 +35,13 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .project__title {
     font-size: 1.8rem;
     line-height: 2.8rem;
+  }
+
+  .project__arrow {
+    font-size: 1.8rem;
   }
 }
