--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -20,7 +20,21 @@
 
 @media screen and (max-width: 768px) {
   .title-container__title {
+    font-size: 2.2rem;
+  }
+
+  .title-container__divider {
+    margin-top: 2.3rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .title-container__title {
     font-size: 1.8rem;
+  }
+
+  .section-title__divider_type_black {
+    background: #000;
   }
 
   .title-container__divider {
