--- a/src/components/Student/Student.css
+++ b/src/components/Student/Student.css
@@ -100,23 +100,43 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   list-style: none;
+}
+
+.student__portfolio-list-divider {
+  width: 100%;
+  height: 1px;
+  background: #e6e6e6;
 }
 
 @media screen and (max-width: 1024px) {
   .student {
-    padding-block: 9rem;
+    padding-top: 9rem;
+    padding-bottom: 7rem;
+    padding-inline: 5rem;
   }
 
   .student__info {
     column-gap: 5rem;
-    padding-bottom: 9.1rem;
+    padding-bottom: 9rem;
+  }
+
+  .student__texts {
+    display: flex;
+    flex-direction: column;
   }
 
   .student__title {
     font-size: 4rem;
     line-height: 4rem;
+  }
+
+  .student__general {
+    margin-top: 1.6rem;
+  }
+
+  .student__bio {
+    margin-top: 2rem;
   }
 
   .student__general,
@@ -125,33 +145,18 @@
     line-height: 1.8rem;
   }
 
-  .student__bio,
-  .student__general {
-    margin: unset;
-  }
-
   .student__image {
     width: 25.5rem;
     height: 30.7rem;
   }
-
-  .student__portfolio {
-    gap: 5rem;
-  }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .student__info {
     padding-top: 6rem;
     padding-bottom: 7rem;
     grid-template-areas: 'image' 'text' 'github';
     grid-template-columns: 1fr;
-  }
-
-  .student__texts {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
   }
 
   .student__title {
@@ -166,7 +171,7 @@
   }
 
   .student__bio {
-    margin-top: unset;
+    margin-top: 2rem;
   }
 
   .student__image {
@@ -183,19 +188,24 @@
     font-size: 1.4rem;
     line-height: 2rem;
   }
-
-  .student__portfolio-list {
-    gap: 2rem;
-  }
 }
 
 @media screen and (max-width: 600px) {
   .student {
     padding-block: 7rem;
-    padding-inline: 1.8rem;
+    padding-inline: 1.4rem;
   }
 
   .student__info {
-    column-gap: 4rem;
+    gap: 4rem;
+  }
+
+  .student__texts {
+    gap: 2rem;
+  }
+
+  .student__general,
+  .student__bio {
+    margin: 0;
   }
 }
