--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -5,7 +5,6 @@
 
 .profile {
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   padding-inline: 3rem;
@@ -25,4 +24,10 @@
 
 .profile__data {
   max-width: 41rem;
+}
+
+@media screen and (max-width: 768px) {
+  .profile {
+    justify-content: center;
+  }
 }
