--- a/src/components/Progress/Progress.css
+++ b/src/components/Progress/Progress.css
@@ -10,7 +10,7 @@
   max-width: 22.8rem;
 }
 
-.progress_percentage {
+.progress__percentage {
   padding-block: 0.9rem;
   padding-inline: 1.4rem;
   font-size: 1.4rem;
