--- a/src/components/Student/Student.css
+++ b/src/components/Student/Student.css
@@ -1,7 +1,7 @@
 .student {
   width: 100%;
   padding-inline: 7rem;
-  padding-bottom: 12.5rem;
+  padding-bottom: 10.5rem;
   padding-top: 11rem;
   background: var(--primary-bg-color, #202020);
   color: #fff;
@@ -106,7 +106,8 @@
 .student__portfolio-list-divider {
   width: 100%;
   height: 1px;
-  background: #e6e6e6;
+  background: #424242;
+  border: none;
 }
 
 @media screen and (max-width: 1024px) {
