--- a/src/components/Movie/Movie.css
+++ b/src/components/Movie/Movie.css
@@ -21,6 +21,11 @@
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 1.8rem;
+  width: 80%;
+  max-width: 25.5rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow-x: hidden;
 }
 
 .movie__duration {
@@ -36,29 +41,41 @@
   object-fit: cover;
 }
 
-.movie__save {
+.movie__save,
+.movie__remove {
   width: 10rem;
-  background: #313131;
-  text-align: center;
-  font-size: 1.2rem;
-  font-weight: 400;
-  line-height: 1.1rem;
   border: none;
-  color: #fff;
-  padding-block: 0.9rem;
-  padding-inline: 1.5rem;
   border-radius: 3rem;
   align-self: center;
   transition: all 0.2s linear;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 29px;
+  min-height: 29px;
 }
 
-.movie__save:hover {
+.movie__save {
+  background: url(../../images/movie_save.svg) no-repeat center / contain;
+}
+
+.movie__remove {
+  background: url(../../images/cross.svg) no-repeat center / 20px #313131;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.movie__save:disabled,
+.movie__remove:disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+.movie__save:hover,
+.movie__remove:hover {
   cursor: pointer;
   opacity: 0.8;
+}
+
+.movie__save_type_saved {
+  background: url(../../images/movie_saved.svg) no-repeat center / contain;
 }
 
 @media screen and (max-width: 600px) {
