--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -7,12 +7,18 @@
 
 .movies__grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 360px));
   align-content: center;
   justify-content: center;
   column-gap: 2.8rem;
   row-gap: 3.2rem;
   list-style: none;
+}
+
+.movies__not-found {
+  font-size: 2rem;
+  text-align: center;
+  color: var(--secondary-text-color, #8b8b8b);
 }
 
 .movies__more:hover {
@@ -33,6 +39,18 @@
   border-radius: 0.6rem;
 }
 
+@media screen and (min-width: 1280px) {
+  .movies__grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1280px) {
+  .movies__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .movies__grid {
     column-gap: 2.4rem;
@@ -51,5 +69,11 @@
 
   .movies__grid {
     row-gap: 1.6rem;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  .movies__grid {
+    grid-template-columns: 100%;
   }
 }
